--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-title: New embed code after refactor
-author: GitHub User
+title: Data Room example
+author: MN
 
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  MN testing creating a fleshed out website
 
 # social links
 
